// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link should do nothing on click when disabled 1`] = `
<DocumentFragment>
  <a
    class="ring-focus group inline-block css-1jnqd87"
    data-ring-focus-margin="-m-1"
    data-testid="Link"
    href="https://arkvault.io/"
    rel="noopener noreferrer"
  >
    <span
      class="css-1lmkmoz"
    >
      ARK.io
    </span>
    <div
      class="mb-[3px] shrink-0 align-middle duration-200 inline-block text-sm css-v0ob3f"
      data-testid="Link__external"
      height="16"
      width="16"
    >
      <svg>
        arrow-external.svg
      </svg>
    </div>
  </a>
</DocumentFragment>
`;

exports[`Link should open an external link 1`] = `
<DocumentFragment>
  <a
    class="ring-focus group inline-block css-15tcy38"
    data-ring-focus-margin="-m-1"
    data-testid="Link"
    href="https://arkvault.io/"
    rel="noopener noreferrer"
  >
    <span
      class="css-1y2194z"
    />
    <div
      class="mb-[3px] shrink-0 align-middle duration-200 css-v0ob3f"
      data-testid="Link__external"
      height="16"
      width="16"
    >
      <svg>
        arrow-external.svg
      </svg>
    </div>
  </a>
</DocumentFragment>
`;

exports[`Link should render 1`] = `
<DocumentFragment>
  <a
    class="ring-focus group inline-block css-15tcy38"
    data-ring-focus-margin="-m-1"
    data-testid="Link"
    href="#/test"
  >
    <span
      class="css-1y2194z"
    >
      Test
    </span>
  </a>
</DocumentFragment>
`;

exports[`Link should render external without children 1`] = `
<DocumentFragment>
  <a
    class="ring-focus group inline-block css-15tcy38"
    data-ring-focus-margin="-m-1"
    data-testid="Link"
    href="https://arkvault.io"
    rel="noopener noreferrer"
  >
    <span
      class="css-1y2194z"
    />
    <div
      class="mb-[3px] shrink-0 align-middle duration-200 css-v0ob3f"
      data-testid="Link__external"
      height="16"
      width="16"
    >
      <svg>
        arrow-external.svg
      </svg>
    </div>
  </a>
</DocumentFragment>
`;

exports[`Link should render with tooltip 1`] = `
<DocumentFragment>
  <a
    class="ring-focus group inline-block css-15tcy38"
    data-ring-focus-margin="-m-1"
    data-testid="Link"
    href="#/test"
  >
    <span
      class="css-1y2194z"
    >
      Test
    </span>
  </a>
</DocumentFragment>
`;

exports[`Link should show a toast when trying to open an invalid external link 1`] = `
<DocumentFragment>
  <a
    class="ring-focus group inline-block css-15tcy38"
    data-ring-focus-margin="-m-1"
    data-testid="Link"
    href="invalid-url"
    rel="noopener noreferrer"
  >
    <span
      class="css-1y2194z"
    />
    <div
      class="mb-[3px] shrink-0 align-middle duration-200 css-v0ob3f"
      data-testid="Link__external"
      height="16"
      width="16"
    >
      <svg>
        arrow-external.svg
      </svg>
    </div>
  </a>
</DocumentFragment>
`;
